@@ -685,9 +685,10 @@ literal|null
 condition|?
 name|res
 else|:
-operator|new
-name|BooleanQuery
-argument_list|()
+name|newBooleanQuery
+argument_list|(
+literal|false
+argument_list|)
 return|;
 block|}
 catch|catch
@@ -1405,8 +1406,7 @@ name|clauses
 operator|.
 name|addElement
 argument_list|(
-operator|new
-name|BooleanClause
+name|newBooleanClause
 argument_list|(
 name|q
 argument_list|,
@@ -1431,8 +1431,7 @@ name|clauses
 operator|.
 name|addElement
 argument_list|(
-operator|new
-name|BooleanClause
+name|newBooleanClause
 argument_list|(
 name|q
 argument_list|,
@@ -1456,8 +1455,7 @@ name|clauses
 operator|.
 name|addElement
 argument_list|(
-operator|new
-name|BooleanClause
+name|newBooleanClause
 argument_list|(
 name|q
 argument_list|,
@@ -1690,8 +1688,7 @@ literal|0
 argument_list|)
 expr_stmt|;
 return|return
-operator|new
-name|TermQuery
+name|newTermQuery
 argument_list|(
 operator|new
 name|Term
@@ -1724,8 +1721,7 @@ comment|// no phrase query:
 name|BooleanQuery
 name|q
 init|=
-operator|new
-name|BooleanQuery
+name|newBooleanQuery
 argument_list|(
 literal|true
 argument_list|)
@@ -1768,11 +1764,10 @@ argument_list|(
 name|i
 argument_list|)
 expr_stmt|;
-name|TermQuery
+name|Query
 name|currentQuery
 init|=
-operator|new
-name|TermQuery
+name|newTermQuery
 argument_list|(
 operator|new
 name|Term
@@ -1810,8 +1805,7 @@ comment|// phrase query:
 name|MultiPhraseQuery
 name|mpq
 init|=
-operator|new
-name|MultiPhraseQuery
+name|newMultiPhraseQuery
 argument_list|()
 decl_stmt|;
 name|mpq
@@ -2031,8 +2025,7 @@ block|{
 name|PhraseQuery
 name|pq
 init|=
-operator|new
-name|PhraseQuery
+name|newPhraseQuery
 argument_list|()
 decl_stmt|;
 name|pq
@@ -2447,6 +2440,171 @@ name|Exception
 name|e
 parameter_list|)
 block|{ }
+return|return
+name|newRangeQuery
+argument_list|(
+name|field
+argument_list|,
+name|part1
+argument_list|,
+name|part2
+argument_list|,
+name|inclusive
+argument_list|)
+return|;
+block|}
+comment|/**   * Builds a new BooleanQuery instance   * @param disableCoord disable coord   * @return new BooleanQuery instance   */
+DECL|method|newBooleanQuery
+specifier|protected
+name|BooleanQuery
+name|newBooleanQuery
+parameter_list|(
+name|boolean
+name|disableCoord
+parameter_list|)
+block|{
+return|return
+operator|new
+name|BooleanQuery
+argument_list|(
+name|disableCoord
+argument_list|)
+return|;
+block|}
+comment|/**   * Builds a new BooleanClause instance   * @param q sub query   * @param occur how this clause should occur when matching documents   * @return new BooleanClause instance   */
+DECL|method|newBooleanClause
+specifier|protected
+name|BooleanClause
+name|newBooleanClause
+parameter_list|(
+name|Query
+name|q
+parameter_list|,
+name|BooleanClause
+operator|.
+name|Occur
+name|occur
+parameter_list|)
+block|{
+return|return
+operator|new
+name|BooleanClause
+argument_list|(
+name|q
+argument_list|,
+name|occur
+argument_list|)
+return|;
+block|}
+comment|/**    * Builds a new TermQuery instance    * @param term term    * @return new TermQuery instance    */
+DECL|method|newTermQuery
+specifier|protected
+name|Query
+name|newTermQuery
+parameter_list|(
+name|Term
+name|term
+parameter_list|)
+block|{
+return|return
+operator|new
+name|TermQuery
+argument_list|(
+name|term
+argument_list|)
+return|;
+block|}
+comment|/**    * Builds a new PhraseQuery instance    * @return new PhraseQuery instance    */
+DECL|method|newPhraseQuery
+specifier|protected
+name|PhraseQuery
+name|newPhraseQuery
+parameter_list|()
+block|{
+return|return
+operator|new
+name|PhraseQuery
+argument_list|()
+return|;
+block|}
+comment|/**    * Builds a new MultiPhraseQuery instance    * @return new MultiPhraseQuery instance    */
+DECL|method|newMultiPhraseQuery
+specifier|protected
+name|MultiPhraseQuery
+name|newMultiPhraseQuery
+parameter_list|()
+block|{
+return|return
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+return|;
+block|}
+comment|/**    * Builds a new PrefixQuery instance    * @param prefix Prefix term    * @return new PrefixQuery instance    */
+DECL|method|newPrefixQuery
+specifier|protected
+name|Query
+name|newPrefixQuery
+parameter_list|(
+name|Term
+name|prefix
+parameter_list|)
+block|{
+return|return
+operator|new
+name|PrefixQuery
+argument_list|(
+name|prefix
+argument_list|)
+return|;
+block|}
+comment|/**    * Builds a new FuzzyQuery instance    * @param term Term    * @param minimumSimilarity minimum similarity    * @param prefixLength prefix length    * @return new FuzzyQuery Instance    */
+DECL|method|newFuzzyQuery
+specifier|protected
+name|Query
+name|newFuzzyQuery
+parameter_list|(
+name|Term
+name|term
+parameter_list|,
+name|float
+name|minimumSimilarity
+parameter_list|,
+name|int
+name|prefixLength
+parameter_list|)
+block|{
+return|return
+operator|new
+name|FuzzyQuery
+argument_list|(
+name|term
+argument_list|,
+name|minimumSimilarity
+argument_list|,
+name|prefixLength
+argument_list|)
+return|;
+block|}
+comment|/**    * Builds a new RangeQuery instance    * @param field Field    * @param part1 min    * @param part2 max    * @param inclusive true if range is inclusive    * @return new RangeQuery instance    */
+DECL|method|newRangeQuery
+specifier|protected
+name|Query
+name|newRangeQuery
+parameter_list|(
+name|String
+name|field
+parameter_list|,
+name|String
+name|part1
+parameter_list|,
+name|String
+name|part2
+parameter_list|,
+name|boolean
+name|inclusive
+parameter_list|)
+block|{
 if|if
 condition|(
 name|useOldRangeQuery
@@ -2494,6 +2652,37 @@ name|inclusive
 argument_list|)
 return|;
 block|}
+block|}
+comment|/**    * Builds a new MatchAllDocsQuery instance    * @return new MatchAllDocsQuery instance    */
+DECL|method|newMatchAllDocsQuery
+specifier|protected
+name|Query
+name|newMatchAllDocsQuery
+parameter_list|()
+block|{
+return|return
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+return|;
+block|}
+comment|/**    * Builds a new WildcardQuery instance    * @param t wildcard term    * @return new WildcardQuery instance    */
+DECL|method|newWildcardQuery
+specifier|protected
+name|Query
+name|newWildcardQuery
+parameter_list|(
+name|Term
+name|t
+parameter_list|)
+block|{
+return|return
+operator|new
+name|WildcardQuery
+argument_list|(
+name|t
+argument_list|)
+return|;
 block|}
 comment|/**    * Factory method for generating query, given a set of clauses.    * By default creates a boolean query composed of clauses passed in.    *    * Can be overridden by extending classes, to modify query being    * returned.    *    * @param clauses Vector that contains {@link BooleanClause} instances    *    to join.    *    * @return Resulting {@link Query} object.    * @exception ParseException throw in overridden method to disallow    */
 DECL|method|getBooleanQuery
@@ -2549,8 +2738,7 @@ block|}
 name|BooleanQuery
 name|query
 init|=
-operator|new
-name|BooleanQuery
+name|newBooleanQuery
 argument_list|(
 name|disableCoord
 argument_list|)
@@ -2628,8 +2816,7 @@ name|termStr
 argument_list|)
 condition|)
 return|return
-operator|new
-name|MatchAllDocsQuery
+name|newMatchAllDocsQuery
 argument_list|()
 return|;
 block|}
@@ -2686,8 +2873,7 @@ name|termStr
 argument_list|)
 decl_stmt|;
 return|return
-operator|new
-name|WildcardQuery
+name|newWildcardQuery
 argument_list|(
 name|t
 argument_list|)
@@ -2752,8 +2938,7 @@ name|termStr
 argument_list|)
 decl_stmt|;
 return|return
-operator|new
-name|PrefixQuery
+name|newPrefixQuery
 argument_list|(
 name|t
 argument_list|)
@@ -2802,8 +2987,7 @@ name|termStr
 argument_list|)
 decl_stmt|;
 return|return
-operator|new
-name|FuzzyQuery
+name|newFuzzyQuery
 argument_list|(
 name|t
 argument_list|,
@@ -5536,6 +5720,37 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|jj_3R_3
+specifier|final
+specifier|private
+name|boolean
+name|jj_3R_3
+parameter_list|()
+block|{
+if|if
+condition|(
+name|jj_scan_token
+argument_list|(
+name|STAR
+argument_list|)
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|jj_scan_token
+argument_list|(
+name|COLON
+argument_list|)
+condition|)
+return|return
+literal|true
+return|;
+return|return
+literal|false
+return|;
+block|}
 DECL|method|jj_3R_2
 specifier|final
 specifier|private
@@ -5600,37 +5815,6 @@ return|return
 literal|true
 return|;
 block|}
-return|return
-literal|false
-return|;
-block|}
-DECL|method|jj_3R_3
-specifier|final
-specifier|private
-name|boolean
-name|jj_3R_3
-parameter_list|()
-block|{
-if|if
-condition|(
-name|jj_scan_token
-argument_list|(
-name|STAR
-argument_list|)
-condition|)
-return|return
-literal|true
-return|;
-if|if
-condition|(
-name|jj_scan_token
-argument_list|(
-name|COLON
-argument_list|)
-condition|)
-return|return
-literal|true
-return|;
 return|return
 literal|false
 return|;
